Align default behaviour of chmod, chgrp, chown, and chflags with symlink(7), IEEE 1003.1-2001 (where applicable) and other systems, by follwoing symlinks on the command line and changing their targets' modes/ownership/flags, rather than ignoring them.

This fixes PR standards/563 (at last).